--- a/example/package.json
+++ b/example/package.json
@@ -2,7 +2,7 @@
   "name": "example",
   "version": "1.0.0",
   "main": "src/index.js",
-  "license": "MIT",
+  "license": "WTFPL",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
