--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "jsnext:main": "dist/index.es.js",
   "repository": "https://github.com/ahmadaidil/reax-select.git",
   "author": "ahmadaidil <ahmdaidil@gmail.com>",
-  "license": "MIT",
+  "license": "WTFPL",
   "publishConfig": {
     "registry": "http://repo.volantis.io/repository/npm/"
   },
