--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Select input for react component",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
-  "jsnext:main": "dist/index.es.js",
   "repository": "https://github.com/ahmadaidil/reax-select.git",
   "author": "ahmadaidil <ahmdaidil@gmail.com>",
   "license": "WTFPL",
@@ -30,11 +29,11 @@
   ],
   "peerDependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "styled-components": "^4.2.0"
   },
   "dependencies": {
-    "react-virtualized": "^9.21.0",
-    "styled-components": "^4.2.0"
+    "react-virtualized": "^9.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -64,6 +63,7 @@
     "rollup-plugin-node-resolve": "^4.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-terser": "^4.0.4",
+    "styled-components": "^4.2.0",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-styled-components": "^0.1.1",
